@@ -27,10 +27,8 @@ class GetHostsContainers
                 continue;
             }
 
-            $client = $this->client->getANewClient($host["Host_ID"]);
-            $containers = $client->containers->all();
-            $containers = $this->addContainersState($client, $containers);
-            ksort($containers, SORT_STRING | SORT_FLAG_CASE);
+            $containers = $this->getContainers($host["Host_ID"]);
+
             $details[$indent] = [
                 "online"=>true,
                 "hostId"=>$host["Host_ID"],
@@ -38,6 +36,15 @@ class GetHostsContainers
             ];
         }
         return $details;
+    }
+
+    public function getContainers(int $hostId)
+    {
+        $client = $this->client->getANewClient($hostId);
+        $containers = $client->containers->all();
+        $containers = $this->addContainersState($client, $containers);
+        ksort($containers, SORT_STRING | SORT_FLAG_CASE);
+        return $containers;
     }
 
     private function addContainersState($client, $containers)
