@@ -160,7 +160,8 @@ if ($haveServers->haveAny() !== true) {
                   },
                   getAllHosts: "/api/Hosts/GetHostsController/getAllHosts",
                   getOverview: "/api/Hosts/GetOverviewController/get",
-                  delete: "/api/Hosts/DeleteHostController/delete"
+                  delete: "/api/Hosts/DeleteHostController/delete",
+                  getHostOverview: "/api/Hosts/GetHostOverviewController/get"
               },
               images: {
                   search: {
@@ -344,6 +345,7 @@ if ($haveServers->haveAny() !== true) {
                     require __DIR__ . "/boxes/deployments.php";
                     require __DIR__ . "/boxes/storage.php";
                     require __DIR__ . "/boxes/networks.php";
+                    require __DIR__ . "/boxes/server.php";
                 ?>
             </div>
             <div class="col-md-2">
@@ -561,25 +563,6 @@ function loadServerOview()
             }
         });
 
-        let toolTipsBytesCallbacks = {
-            callbacks: {
-                label: function(value, data) {
-                    return formatBytes(value.value);
-                }
-            }
-        };
-
-
-        let scalesBytesCallbacks = {
-          yAxes: [{
-            ticks: {
-              callback: function(value, index, values) {
-                  return formatBytes(value);
-              }
-            }
-          }]
-        };
-
         new Chart(mCtx, {
             type: 'line',
             data: {
@@ -650,13 +633,13 @@ function loadServerOview()
 
             let p = emptyServerBox();
             let indent = data.alias == "" ? host : data.alias + ` (${host})`;
-            $(p).find(".host").text(indent);
+
+            $(p).find(".host").text(indent).data("id", data.hostId)
             $(p).attr("id", data.hostId);
 
             if(data.online == false){
                 $(p).find(".host").text(indent + " (Offline)");
                 $(p).find(".bg-info").removeClass("bg-info").addClass("bg-danger");
-                $(p).find(".deleteHost").removeClass("btn-danger").addClass("btn-info")
                 $("#serverOverviewDetails").append(p);
                 $(p).find(".brand-card-body").remove();
                 return;
@@ -730,7 +713,7 @@ function createContainerTree(){
                 i += " (Offline)";
             }
 
-            hosts += `<li class="nav-item nav-dropdown ${listIsOpen}">
+            hosts += `<li data-hostId="${host.hostId}" class="nav-item nav-dropdown ${listIsOpen}">
                 <a class="nav-link nav-dropdown-toggle ${disabled}" href="#">
                     <i class="fas fa-server"></i> ${i}
                 </a>
@@ -762,6 +745,17 @@ function createContainerTree(){
         $("#sidebar-ul").empty().append(hosts);
     });
 }
+
+$(document).on("click", ".viewHost", function(){
+    let hostId = null;
+    if($(this).hasClass("lookupId")){
+        hostId = currentContainerDetails.hostId;
+    }else{
+        hostId = $(this).data("id");
+    }
+
+    loadServerView(hostId);
+});
 
 $("#sidebar-ul").on("click", ".view-container", function(){
     setContDetsByTreeItem($(this));
